# ape-dts

./: Cargo.toml  README.md  README_ZH.md  log4rs.yaml
.github/workflows/: build_and_push_images.yml  build_and_release.yml
docs/en/: config.md  config_changelog.md
docs/en/monitor/: task_metrics.md
docs/zh/: config.md  config_changelog.md
docs/zh/monitor/: task_metrics.md
dt-cli/: Cargo.toml  README.md
dt-cli/src/: config.rs
dt-common/: Cargo.toml
dt-common/src/: lib.rs  logger.rs  runtime_trace.rs
dt-common/src/config/: mod.rs  task_config.rs  tracing_config.rs
dt-common/src/limiter/: base_limiter.rs  capacity_limiter.rs  rate_limiter.rs
dt-common/src/meta/: col_value.rs  dt_queue.rs  tagged_col_value_map.rs
dt-common/src/meta/avro/: avro_converter.rs
dt-common/src/meta/mongo/: mongo_constant.rs  mongo_ddl.rs  mongo_key.rs
dt-common/src/monitor/: counter_type.rs  mod.rs  prometheus_metrics.rs  sinker_worker_metrics.rs  task_metrics.rs  task_monitor.rs  task_monitor_handle.rs
dt-connector/src/: lib.rs  rdb_query_builder.rs
dt-connector/src/common/mongo/: changestream_parser.rs  mod.rs  oplog_parser.rs
dt-connector/src/extractor/: base_extractor.rs  snapshot_dispatcher.rs
dt-connector/src/extractor/mongo/: mongo_cdc_extractor.rs  mongo_snapshot_extractor.rs
dt-connector/src/extractor/mysql/: mysql_cdc_extractor.rs
dt-connector/src/extractor/redis/: redis_cluster_psync_extractor.rs
dt-connector/src/sinker/: busy_tracking_sinker.rs  checkable_sinker.rs  mod.rs
dt-connector/src/sinker/mongo/: mongo_sinker.rs
dt-main/: Cargo.toml
dt-main/src/: main.rs
dt-parallelizer/src/: base_parallelizer.rs  merge_parallelizer.rs  mongo_merger.rs  redis_parallelizer.rs  serial_parallelizer.rs  snapshot_parallelizer.rs
dt-pipeline/: Cargo.toml
dt-pipeline/src/: base_pipeline.rs  lua_processor.rs
dt-precheck/src/prechecker/: redis_prechecker.rs
dt-task/: Cargo.toml
dt-task/src/: extractor_util.rs  sinker_util.rs  task_runner.rs  task_util.rs
dt-tests/: Cargo.toml
dt-tests/scripts/: run-integration-tests.sh
dt-tests/tests/mongo_to_mongo/: cdc_tests.rs  snapshot_tests.rs  struct_tests.rs
dt-tests/tests/mongo_to_mongo/cdc/changestream_test/: src_prepare.sql  src_test.sql  task_config.ini
dt-tests/tests/mongo_to_mongo/cdc/changestream_utf8_error_test/: src_prepare.sql  task_config.ini
dt-tests/tests/mongo_to_mongo/cdc/oplog_test/: src_test.sql  task_config.ini
dt-tests/tests/mongo_to_mongo/cdc/oplog_utf8_test/: dst_prepare.sql  task_config.ini
dt-tests/tests/mongo_to_mongo/snapshot/utf8_error_test/: dst_prepare.sql  task_config.ini
dt-tests/tests/mongo_to_mongo/struct/advanced_options_and_indexes_test/: dst_prepare.sql  src_prepare.sql  task_config.ini
dt-tests/tests/mysql_to_mysql/snapshot/basic_test/: task_config.ini
dt-tests/tests/parallelizer/: mod.rs
dt-tests/tests/parallelizer/queue_notify/: bench_util.rs  mod.rs  mpsc_vs_concurrent_queue_result.md  mpsc_vs_concurrent_queue_test.rs
dt-tests/tests/test_runner/: mongo_test_runner.rs
