[workspace]
resolver = "2"

members = [
    "dt-common",
    "dt-precheck",
    "dt-connector",
    "dt-parallelizer",
    "dt-pipeline",
    "dt-task",
    "dt-main",
    "dt-cli",
    "dt-tests"
]

[workspace.lints.clippy]
assigning_clones = "allow"

[workspace.dependencies]
sqlx = {version = "0.8.6", features = ["runtime-async-std-rustls", "mysql", "postgres", "bigdecimal", "ipnetwork", "mac_address", "bit-vec", "time", "chrono", "json", "uuid"]}
futures = "0.3.25"
mysql-binlog-connector-rust = {git = "https://github.com/apecloud/mysql-binlog-connector-rust", tag = "v0.3.4", features = ["openssl-tls"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.87"
chrono = "0.4.38"
byteorder = "1.4.3"
concurrent-queue = "2.0.0"
url = "2.3.1"
serde_yaml = "0.9.16"
log = "0.4.17"
log4rs = "1.2.0"
serial_test = "3.0.0"
async-trait = "0.1.64"
async-recursion = "1.0.2"
tokio-postgres = {git = "https://github.com/apecloud/rust-postgres"}
postgres-openssl = {git = "https://github.com/apecloud/rust-postgres"}
postgres-protocol = {git = "https://github.com/apecloud/rust-postgres"}
postgres-types= {git = "https://github.com/apecloud/rust-postgres"}
tokio = { version = "1.25.0", features = ["full"] }
tokio-metrics = { version = "0.5.1", default-features = false }
tokio-util = {version = "0.7.7", features = ["rt"]}
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "registry", "std"] }
bytes = "1.0"
configparser = "3.0.2"
async-mutex = "1.4.0"
project-root = "0.2.2"
strum = { version = "0.25.0", features = ["derive"] }
regex = "1.5.4"
rdkafka = { version = "0.38.0", features = ["cmake-build","libz-static"] }
kafka = "0.10.0"
reqwest = {git = "https://github.com/apecloud/reqwest", features = ["redirect-with-sensitive-headers"] }
uuid = { version = "1.3.1", features = ["v4"] }
nom = "7.1.3"
mongodb = { version = "=3.6.0" }
dotenv = "0.15.0"
redis =  { version = "0.27.4", features = ["tokio-comp"] }
thiserror = "1.0.44"
async-std = "1.12.0"
apache-avro =  { version = "0.16.0", features = ["derive"]}
mlua = { version = "0.9.7", features = ["lua54", "vendored"] }
anyhow = {version = "1.0.83", features = ["backtrace"]}
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.40"
rust_decimal = "1.35.0"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"]}
actix-web = "=4.12.1"
hex = "0.4.3"
clickhouse = "0.13.1"
dashmap = "6.1.0"
percent-encoding = "2.3.1"
urlencoding = "2.1.3"
opendal = { version = "0.54.1", features = ["services-s3"] }
governor = "0.10.4"
indexmap = "2"
libc = "0.2"

[profile.release]
panic = 'unwind'
strip = 'debuginfo'
opt-level = 3
lto = true
codegen-units = 1

[profile.profiling]
inherits = 'release'
debug = true
strip = 'none'
lto = false
codegen-units = 16
