[package]
name = "dt-main"
version = "2.0.26"
edition = "2021"

[lints]
workspace = true

[features]
metrics = ["dt-task/metrics"]
tracing = ["dt-task/tracing"]

[dependencies]
dt-task = {path = "../dt-task", version = "0.1.0"}
dt-precheck = {path = "../dt-precheck", version = "0.1.0"}
clap = { workspace = true }
tokio = { workspace = true }
