[package]
name = "dt-pipeline"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
dt-common = {path = "../dt-common", version = "0.1.0"}
dt-connector = {path = "../dt-connector", version = "0.1.0"}
dt-parallelizer = {path = "../dt-parallelizer", version = "0.1.0"}

async-trait = { workspace = true }
async-mutex = { workspace = true }
tokio = { workspace = true }
concurrent-queue = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
async-std = { workspace = true }
mlua = { workspace = true }
anyhow = { workspace = true }
serde ={ workspace = true }
serde_json = { workspace = true }
