[package]
edition = "2021"
name = "dt-tests"
version = "0.1.0"

[lints]
workspace = true

[features]
tracing = ["dt-task/tracing"]

[dependencies]
dt-common = { path = "../dt-common", version = "0.1.0" }
dt-connector = { path = "../dt-connector", version = "0.1.0" }
dt-precheck = { path = "../dt-precheck", version = "0.1.0" }
dt-parallelizer = { path = "../dt-parallelizer", version = "0.1.0" }
dt-task = { path = "../dt-task", version = "0.1.0" }

anyhow = { workspace = true }
chrono = { workspace = true }
clickhouse = { workspace = true, features = ["time"] }
concurrent-queue = { workspace = true }
configparser = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
libc = { workspace = true }
mongodb = { workspace = true }
project-root = { workspace = true }
rdkafka = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
openssl = { workspace = true }

[dev-dependencies]
rand = "0.9.2"
fake = { version = "4.4.0", features = [
    "derive",
    "serde_json",
    "uuid",
    "bigdecimal",
    "time",
    "chrono",
    "geo",
] }
time = { version = "0.3", features = ["formatting"] }
geo-types = { version = "0.7" }
